# ChangeLog for net-irc/charybdis
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/charybdis/ChangeLog,v 1.8 2008/01/08 14:24:09 jokey Exp $

  08 Jan 2008; Markus Ullmann <jokey@gentoo.org> charybdis-2.2.0.ebuild,
  charybdis-2.2.1_pre20080108.ebuild:
  Block with ircd-hybrid, both provide ircd executable

*charybdis-2.2.1_pre20080108 (08 Jan 2008)

  08 Jan 2008; Markus Ullmann <jokey@gentoo.org>
  +charybdis-2.2.1_pre20080108.ebuild:
  Add pre-release snapshot

  08 Jan 2008; Markus Ullmann <jokey@gentoo.org> charybdis-2.2.0.ebuild:
  Keyword ~x86

*charybdis-2.2.0 (06 Sep 2007)
*charybdis-2.1.5 (06 Sep 2007)

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -files/charybdis-1.1.0-paths.patch, +files/charybdis-dircreate.patch,
  -charybdis-1.1.0.ebuild, -charybdis-2.1.0.ebuild, +charybdis-2.1.5.ebuild,
  +charybdis-2.2.0.ebuild:
  Version bump and cleanup

  21 Feb 2007; Raúl Porcel <armin76@gentoo.org> Manifest:
  Convert to Manifest2

*charybdis-2.1.0 (28 Jan 2007)

  28 Jan 2007; Alec Warner <antarus@gentoo.org> +charybdis-2.1.0.ebuild:
  add charybdis 2.1 for nenolod and bug # 152209

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

*charybdis-1.1.0 (07 Mar 2006)

  07 Mar 2006; Alec Warner <antarus@gentoo.org>
  +files/charybdis-1.1.0-paths.patch, +files/charybdis-ircd.confd,
  +files/charybdis-ircd.initd, +charybdis-1.1.0.ebuild:
  Initial commit, ebuild submitted by Michael Tharp <gxti AT partiallystapled
  DOT com>
