@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/charybdis/charybdis-2.2.0.ebuild,v 1.3 2008/01/08 14:24:09 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/charybdis/charybdis-2.2.0.ebuild,v 1.4 2008/01/08 21:17:01 jokey Exp $
 
 inherit eutils
 
@@ -45,5 +45,7 @@ src_compile() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install
+	emake DESTDIR="${D}" install || die "emake install failed"
+	newconfd "${FILESDIR}"/charybdis-ircd.confd charybdis-ircd
+	newinitd "${FILESDIR}"/charybdis-ircd.initd charybdis-ircd
 }
